Add missing </li>

--- a/engines/v8.md
+++ b/engines/v8.md
@@ -110,6 +110,6 @@ v8-maglev: ./v8 --no-turbofan
 <a href="../conformance/kangax-es2024/regex.flags.v.unicode-17.0.js">regex.flags.v.unicode-17.0.js</a>: failed
 </pre></li>
 <li>ES2025: 100%</li>
-<li>Next: 36%<br>
+<li>Next: 36%</li>
 <li>Intl: 100%</li>
 </ul></details>
